Changes to keep Mr. Eastwood happy.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
-/target
-/classes
+
 /checkouts
+/classes
+/dev
 /node_modules
 /out
 /resources
-
+/target
 pom.xml
 pom.xml.asc
 *.jar
 *.class
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
+.*
 *~
 *#
